barra nav e imagenes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       </li>
     </ul>
 
+    <div class="pandas">
+      <img src="assets/img/pandaBueno_dos.jpg" alt="" class="pandaIlustracion">
+    </div>
+    <div class="pandas">
+      <img src="assets/img/pandaGay_dos.jpg" alt="" class="pandaIlustracion">
+    </div>
+    <div class="pandas">
+      <img src="assets/img/pandaEnvidioso.jpg" alt="" class="pandaIlustracion">
+    </div>
 
     <script src="assets/js/main.js"></script>
   </body>
