--- a/index.html
+++ b/index.html
@@ -21,24 +21,34 @@
       </li>
     </ul>
 
+
     <div class="pandas">
       <img src="assets/img/pandaBueno_dos.jpg" alt="" class="pandaIlustracion">
+      <span class="close">&times;</span>
     </div>
+
     <div class="pandas">
       <img src="assets/img/pandaGay_dos.jpg" alt="" class="pandaIlustracion">
+      <span class="close">&times;</span>
     </div>
+
     <div class="pandas">
       <img src="assets/img/pandaEnvidioso.jpg" alt="" class="pandaIlustracion">
+      <span class="close">&times;</span>
     </div>
 
     <section class="secciones">
-      <div>Origen</div>
-      <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+      <div><a id="botonOrigen">Origen</a></div>
+      <div><a id="botonHistoria">Historia</a></div>
+      <div><a id="botonRestaurar">Restaurar</a></div>
     </section>
 
-    <section class="secciones">
-      <div>Historia</div>
-      <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+    <section class="seccionesArticulo" id="textoOrigen">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </section>
+
+    <section class="seccionesArticulo"  id="textoHistoria">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </section>
 
 
