Corregido, terminado y funcionando bien

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="">Inicio</a></li>
         <li><a href="">Pandas</a></li>
         <li><a href="">Historia</a></li>
-        <li><a href="">Extinción</a></li>
+        <li><a href="">Ilustración</a></li>
       </li>
     </ul>
 
